--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,7 +8,7 @@ services:
       context: ..
       dockerfile: ./sc-manager-greenfield/backend/Dockerfile
       target: production
-    container_name: sc-mgr-backend-prod
+    container_name: tc-mgr-backend-prod
     # Performance optimizations
     mem_limit: 4g
     cpus: 4.0
@@ -100,7 +100,7 @@ services:
         REACT_APP_LUCIDLINK_MOUNT_POINT: ${LUCIDLINK_MOUNT_POINT:-/media/lucidlink-1}
         REACT_APP_GRAFANA_URL: ${REACT_APP_GRAFANA_URL:-}
     image: sc-manager-greenfield-frontend:latest
-    container_name: sc-mgr-frontend-prod
+    container_name: tc-mgr-frontend-prod
     ports:
       - "8091:80"
     depends_on:
@@ -131,4 +131,4 @@ volumes:
 
 networks:
   default:
-    name: sc-mgr-network
+    name: tc-mgr-network
