Create production build package and improve deployment documentation
- Created fresh production build v1.7.0 (20250729_071442)
- Added comprehensive DEPLOYMENT_CHECKLIST.md for new system installations
- Fixed PRODUCTION_DEPLOYMENT.md to show correct deploy-production.sh parameters
- Updated build script to use correct GitHub repository URL
- Added .gitignore rules to exclude large build artifacts (.tar, .tar.gz)
- Included all necessary build metadata, scripts, and schema files

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,15 @@ ssl/*.crt
 ssl/*.key
 ssl/*.pem
 .claude/
+
+# Build artifacts (never commit these large files)
+builds/**/*.tar
+builds/**/*.tar.gz
+builds/**/*.zip
+
+# But allow build metadata and scripts
+!builds/**/DEPLOY.md
+!builds/**/docker-compose*.yml
+!builds/**/schema/
+!builds/**/scripts/
+!builds/**/migrations/
