Clean up sample, test, and backup files from repository
- Added video_samples/ directory to .gitignore
- Added patterns for backup files (*.backup, *.original, .env.backup.*)
- Added rui_example.* files to .gitignore
- Added development-specific test scripts to .gitignore
- Removed all these files from git tracking
- Kept legitimate test scripts in scripts/ directory

--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,17 @@ ssl/*.key
 ssl/*.pem
 .claude/
 
+# Sample/scratch/test files
+video_samples/
+rui_example.*
+*.backup
+*.original
+.env.backup.*
+
+# Test scripts that are development-specific
+backend/final-integration-test.sh
+backend/test-*.sh
+
 # Build artifacts (never commit these large files)
 builds/**/*.tar
 builds/**/*.tar.gz
