--- a/docker-compose.package.yml
+++ b/docker-compose.package.yml
@@ -6,9 +6,24 @@ services:
   backend:
     # Remove build configuration - use pre-loaded image
     build: !reset
-    image: teamcache-backend:1.7.0
+    image: tc-mgr-backend:${BUILD_VERSION:-1.7.0}
     
   frontend:
     # Remove build configuration - use pre-loaded image  
     build: !reset
-    image: teamcache-frontend:1.7.0
+    image: tc-mgr-frontend:${BUILD_VERSION:-1.7.0}
+    # Add runtime configuration environment variables
+    environment:
+      - FRONTEND_API_URL=${FRONTEND_API_URL:-/api}
+      - FRONTEND_WS_URL=${FRONTEND_WS_URL:-/ws}
+      - FRONTEND_GRAFANA_URL=${FRONTEND_GRAFANA_URL:-}
+      - LUCIDLINK_MOUNT_POINT=${LUCIDLINK_MOUNT_POINT:-/media/lucidlink-1}
+    # Mount nginx configuration files
+    volumes:
+      - ./frontend/nginx-base.conf:/etc/nginx/nginx.conf:ro
+      - ./frontend/nginx.production.conf:/etc/nginx/conf.d/default.conf:ro
+  
+  varnish-stats:
+    # Remove build configuration - use pre-loaded image
+    build: !reset
+    image: tc-mgr-varnish-stats:${BUILD_VERSION:-1.7.0}
