--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ services:
       ENABLE_LUCIDLINK_STATS: ${ENABLE_LUCIDLINK_STATS:-true}
       LUCIDLINK_INCLUDE_GET_TIME: ${LUCIDLINK_INCLUDE_GET_TIME:-true}
       LUCIDLINK_COMMAND: ${LUCIDLINK_COMMAND:-/usr/local/bin/lucid}
-      LUCIDLINK_REST_ENDPOINT: ${LUCIDLINK_REST_ENDPOINT}
+      LUCIDLINK_REST_ENDPOINT: ${LUCIDLINK_REST_ENDPOINT:-}
       # LucidLink daemon configuration
       LUCIDLINK_FILESPACE: ${LUCIDLINK_FILESPACE}
       LUCIDLINK_USER: ${LUCIDLINK_USER}
@@ -234,7 +234,7 @@ services:
     container_name: tc-mgr-varnish-stats
     environment:
       VARNISH_STATS_INTERVAL: ${VARNISH_STATS_INTERVAL:-60000}
-      VARNISH_CONTAINER_NAME: ${VARNISH_CONTAINER_NAME:-sitecache-varnish-1}
+      VARNISH_CONTAINER_NAME: ${VARNISH_CONTAINER_NAME:-varnish}
     volumes:
       - varnish_stats:/data
       - /var/run/docker.sock:/var/run/docker.sock
