--- a/docker-compose.caddy.yml
+++ b/docker-compose.caddy.yml
@@ -4,16 +4,16 @@
 services:
   frontend:
     build:
-      context: ../
-      dockerfile: ./sc-manager-greenfield/frontend/Dockerfile.caddy
+      context: ..
+      dockerfile: ./tc-manager/frontend/Dockerfile.caddy
       args:
         # Use HTTPS URLs with SERVER_HOST variable
         REACT_APP_API_URL: ${REACT_APP_API_URL:-https://${SERVER_HOST:-localhost}/api}
         REACT_APP_WS_URL: ${REACT_APP_WS_URL:-wss://${SERVER_HOST:-localhost}/ws}
         REACT_APP_LUCIDLINK_MOUNT_POINT: ${LUCIDLINK_MOUNT_POINT:-/media/lucidlink-1}
         REACT_APP_GRAFANA_URL: ${REACT_APP_GRAFANA_URL:-https://${SERVER_HOST:-localhost}:3000}
-    image: sc-manager-frontend-caddy
-    container_name: sc-mgr-frontend-caddy
+    image: tc-mgr-frontend-caddy
+    container_name: tc-mgr-frontend-caddy
     ports:
       - "443:443"   # HTTPS with auto certificates
       # Port 80 is handled internally by Caddy for HTTP->HTTPS redirects
