--- a/docker-compose.ssl.yml
+++ b/docker-compose.ssl.yml
@@ -4,7 +4,7 @@
 services:
   frontend:
     # Ensure we're using the production nginx image, not dev server
-    image: sc-manager-greenfield-frontend:latest
+    image: tc-mgr-frontend:latest
     build:
       target: production
     ports:
