fix: correct API URLs in deployment scripts for nginx proxy
- Fixed generate-production-env.sh to use nginx proxy URLs (port 8090) for non-SSL
- Updated deploy-production.sh to show correct proxy URLs in deployment summary
- Fixed .env.example to show correct non-SSL URL patterns
- Ensures frontend connects through nginx proxy instead of directly to backend

This fixes CORS errors and WebSocket connection failures by ensuring
all frontend connections go through the nginx reverse proxy.

--- a/.env.example
+++ b/.env.example
@@ -92,8 +92,8 @@ REACT_APP_LUCIDLINK_MOUNT_POINT=/media/lucidlink-1
 REACT_APP_GRAFANA_URL=https://${SERVER_HOST}:3000
 
 # For non-SSL deployment (development only), uncomment these:
-# REACT_APP_API_URL=http://${SERVER_HOST}:3001/api
-# REACT_APP_WS_URL=ws://${SERVER_HOST}:3002
+# REACT_APP_API_URL=http://${SERVER_HOST}:8090/api
+# REACT_APP_WS_URL=ws://${SERVER_HOST}:8090/ws
 
 # =============================================================================
 # SERVICE CONFIGURATION
