feat: add API gateway service for external cache job submission
- Create REST API service on port 8095 for external integrations
- Implement endpoints for job creation, status, listing, and cancellation
- Add simple API key authentication for dev/demo use
- Include rate limiting (10 requests/minute) to prevent abuse
- Direct PostgreSQL integration for job management
- Add comprehensive documentation and test scripts
- Update README and .env.example with API gateway configuration

API jobs integrate seamlessly with existing web UI and cache workers.

--- a/.env.example
+++ b/.env.example
@@ -136,6 +136,12 @@ ELASTICSEARCH_SYNC_DELETIONS=true
 VARNISH_STATS_INTERVAL=60000
 VARNISH_CONTAINER_NAME=varnish
 
+# API Gateway Configuration (optional)
+# External API for submitting cache jobs
+API_GATEWAY_ENABLED=false                # Enable external API gateway
+API_GATEWAY_PORT=8095                    # External port for API gateway
+API_GATEWAY_KEY=demo-api-key-2024        # API key for authentication (change in production!)
+
 # Remote Upload Indicator (RUI) service
 # Tracks files being uploaded across the LucidLink filesystem
 #
