feat: enhance API gateway with path normalization and request logging
- Add automatic path normalization for cross-platform compatibility
- Support relative paths (recommended) and absolute paths from any OS
- Add request logging for monitoring and debugging
- Update documentation with path handling examples
- Fix validation to accept normalized paths

--- a/.env.example
+++ b/.env.example
@@ -141,6 +141,7 @@ VARNISH_CONTAINER_NAME=varnish
 API_GATEWAY_ENABLED=false                # Enable external API gateway
 API_GATEWAY_PORT=8095                    # External port for API gateway
 API_GATEWAY_KEY=demo-api-key-2024        # API key for authentication (change in production!)
+CONTAINER_MOUNT_POINT=/media/lucidlink-1 # Container mount point for LucidLink filespace
 
 # Remote Upload Indicator (RUI) service
 # Tracks files being uploaded across the LucidLink filesystem
