--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "express-rate-limit": "^6.10.0",
     "dotenv": "^16.3.1",
-    "joi": "^17.9.2"
+    "joi": "^17.9.2",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
