fix: remove invalid shell syntax from Docker COPY instruction
- Fix backend/Dockerfile line 122 to use plain COPY without shell operations
- Docker COPY doesn't support '2>/dev/null || true' syntax
- Since .npmrc file exists in the repository, unconditional copy is correct

This fixes the production deployment build error:
'cannot copy to non-directory: /var/lib/docker/overlay2/.../app/true'

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -119,7 +119,7 @@ ENV NODE_ENV=production
 
 # Copy package files and npm config
 COPY tc-manager/backend/package*.json ./
-COPY tc-manager/backend/.npmrc ./ 2>/dev/null || true
+COPY tc-manager/backend/.npmrc ./
 
 # Install dependencies with optimization flags and suppressed warnings
 # Note: node-pty requires python3 and build-essential which are already installed
