--- a/docker-compose.ssl.yml
+++ b/docker-compose.ssl.yml
@@ -9,6 +9,7 @@ services:
       target: production
     ports:
       - "443:443"  # Only expose HTTPS, nginx handles HTTP->HTTPS redirect internally
+      # Note: This overrides but doesn't remove ports from base compose files
     volumes:
       - ./ssl:/etc/nginx/ssl:ro
       - ./frontend/nginx.ssl.conf:/etc/nginx/conf.d/default.conf:ro
